--- a/docker.css
+++ b/docker.css
@@ -6,12 +6,6 @@ body{
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
 }
-header{
-	background-color: #00084D;
-	display: flex;
-	flex-wrap: wrap;
-	padding: 0;
-}
 a{
 	text-decoration: none;
 }
@@ -22,24 +16,34 @@ header a:hover{
 	text-decoration: underline;
 }
 header div{
-	display: flex;
-	justify-content: space-between;
-	align-items: stretch;
-	width: 100%;
-	padding: 0px 100px;
+	background-color: #00084D;
+	display: flex;	
+	align-items: center;
+	gap: 20px;
+	padding-left:60px ;
 }
+header div div{
+	display: flex;
+	flex-wrap: wrap;
+	text-align: center;
+	align-content: center;
+	justify-content: center;
+} 
 header div p{
 	display: flex;
+	flex-wrap: wrap;
 	gap: 15px;
+	font-weight: 500;
 }
 header nav{
 	background-color: white;
-	width: 100%;
+	
 	display: flex;
 	flex-wrap: wrap;
 	border-bottom: 1px solid black;
 	gap: 30px;
 	justify-content: space-around;
+	align-content: center;
 	padding: 30px 0px;
 	color: black;
 	font-weight: 500;
@@ -47,6 +51,10 @@ header nav{
 header nav a{
 	color: #505968;
 	padding: 0px 10px;
+}
+header nav span{
+	display: flex;
+	flex-wrap: wrap;
 }
 .boton_blanco{
 	border: 1px solid black;
@@ -67,7 +75,7 @@ header nav a{
 }
 
 main{
-	width: 100%;
+	
 	display: flex;
 	justify-content: center;
 	padding: 20px 0px;
