--- a/docker.css
+++ b/docker.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
-
+.colorgrad{
+	background:linear-gradient(90deg, #0B214A, #1C5FE6);
+	-webkit-text-fill-color:transparent;
+	-webkit-background-clip:text;
+}
 body{
 	margin: 0;
 	padding: 0;
@@ -12,7 +16,7 @@ a{
 header a{
 	color: #C6BEC4;
 }
-header a:hover{
+a:hover{
 	text-decoration: underline;
 }
 header div{
@@ -21,13 +25,17 @@ header div{
 	align-items: center;
 	gap: 20px;
 	padding-left:60px ;
+	padding-right: 60px;
 }
 header div div{
+	
+	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
 	text-align: center;
 	align-content: center;
-	justify-content: center;
+	justify-content: space-between;
+
 } 
 header div p{
 	display: flex;
@@ -37,16 +45,18 @@ header div p{
 }
 header nav{
 	background-color: white;
-	
 	display: flex;
 	flex-wrap: wrap;
 	border-bottom: 1px solid black;
 	gap: 30px;
 	justify-content: space-around;
 	align-content: center;
-	padding: 30px 0px;
 	color: black;
 	font-weight: 500;
+}
+header nav img{
+
+	height: 100px;
 }
 header nav a{
 	color: #505968;
@@ -55,6 +65,8 @@ header nav a{
 header nav span{
 	display: flex;
 	flex-wrap: wrap;
+	align-items: center;
+	gap: 20px;
 }
 .boton_blanco{
 	border: 1px solid black;
@@ -75,23 +87,118 @@ header nav span{
 }
 
 main{
-	
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 	padding: 20px 0px;
-
 }
-main div p{
+main section{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	padding:50px 0px;
+	border-bottom: 1px solid black;
+	border-radius: 0px 0px 75px 75px;
+}
+main section h1,h2{
+	text-align: center;
 	font-size: 100px;
 	font-weight: bold;
 	margin: 0px;
 }
-main div span p{
+main section p{
+	text-align: center;
+	font-size: 24px;
+	font-weight: bold;
+	margin: 0px;
+}
+main section span p{
 	text-align: center;
 	font-size: 24px;
 	font-weight: 500;
 	margin: 0px;
 }
-main div span p a:hover{
+main section span p a:hover{
 	text-decoration: underline;
+}
+main section div{
+	display: flex;
+	gap: 20px;
+	justify-content: center;
+	margin-top:30px;
+}
+main section div a{
+	font-size: 24px;
+	font-weight: 500;
+}
+.logos{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding: 0px 10%;
+	gap: 0px;
+}
+.logos div{
+	margin: 0px;
+}
+.stats{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 150px;
+}
+.stats div{
+	display: flex;
+	flex-direction: column;
+}
+.stats div p:first-child{
+	font-size: 80px;
+}
+.stats div p:last-child{
+	font-size: 20px;
+	font-weight: 100;
+}
+.dual{
+	display: flex;
+	flex-wrap: wrap;
+	padding:0px 10%;
+	gap:0px;
+}
+.dual div{
+	width: 40%;
+	margin: 0px;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	text-align: justify;
+}
+.dual p, a, h5, h3{
+	margin: 0px;
+	text-align: left;
+}
+.dual div p, a{
+	font-size: 18px;
+	font-weight: 100;
+}
+.dual h5{
+	font-size: 28px;
+}
+.dual h3{
+	font-size: 56px;
+}
+.dual div img{
+	height: 300px;
+}
+.columna{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.columna a{
+	text-align: center;
+}
+.columna img{
+	height: 36%;
+	width: 70%;
 }
