--- a/docker.css
+++ b/docker.css
@@ -195,15 +195,12 @@ main h4{
 	flex-direction: column;
 	justify-content: left;
 	align-items: center;
-	flex-wrap: wrap;
-	
+	flex-wrap: nowrap;	
 }
-.columna a{
-	text-align: center;
-}
+
 .columna img{
 	height: 36%;
-	width: 70%;
+
 }
 .oscuro{
 	background-color: #03061E;
@@ -219,15 +216,16 @@ main h4{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	width: 60%;
-	align-items: center;
-	align-content: center;
+	align-items: flex-start;
+	align-content: left;
 	flex-wrap: wrap;
-	height: 150px;
+	gap: 0px 50px;
+	
 }
 footer{
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
 	flex-direction: column;
+	padding-bottom: 50px;
 }
