--- a/docker.css
+++ b/docker.css
@@ -94,7 +94,7 @@ main section{
 }
 main section h1,h2{
 	text-align: center;
-	font-size: 100px;
+	font-size: 80px;
 	font-weight: bold;
 	margin: 0px;
 }
@@ -200,13 +200,24 @@ footer{
 .logos div{
 	margin: 0px;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
+}
+.oscuro > .logos div{
+	width: 1400px;
+	gap: 10px 15px;
+	padding-right: 5%;
+	padding-left: 5%;
+}
+.oscuro > .logos div > div{
+	width: 150px;
+	padding: 2% 2%;
 }
 .stats{
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
-	gap: 150px;
+	gap: 140px;
 }
 .stats div{
 	display: flex;
@@ -233,21 +244,16 @@ footer{
 	flex-direction: column;
 	text-align: justify;
 }
-.dual p, a, h5, h3{
-	margin: 0px;
-	text-align: left;
-}
 
-.dual div img{
-	height: 100%;
-	width: 100%;
-}
 .columna{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	flex-wrap: nowrap;	
+	
+	text-align: center;
+	padding-left: 5%;
+	padding-right: 5%;	
 }
 
 .columna img{
@@ -288,7 +294,22 @@ footer{
 	height: 80%;
 	width: 60%;
 }
-
+.columna_unica > h3{
+	margin: 0px;
+	text-align: center;
+}
+.columna_unica h4{
+	margin: 0px;
+	font-weight: 500;
+}
+.columna_unica span > h2{
+	font-size: 26px;
+}
+.columna_unica span > p{
+	padding: 0% 15%;
+	font-weight: 100;
+	font-size: 18px;
+}
 .columna_dual{
 	display: flex;
 	flex-wrap: wrap;
@@ -297,8 +318,8 @@ footer{
 .columna_dual div{
 	display: flex;
 	flex-direction: column;
-	padding-left: 5%;
-	padding-right: 5%;
+	padding-left: 3%;
+	padding-right: 3%;
 	margin-top: 5%;
 	margin-bottom: 5%;
 }
@@ -310,6 +331,7 @@ footer{
 	height: 100%;
 	width: 100%;
 }
+
 .ancho700{
 	width: 700px;
 }
@@ -322,11 +344,20 @@ footer{
 .ancho400{
 	width: 400px;
 }
+.ancho400 > *{
+	margin: 0px;
+}
 .columna_grupo{
 	display: flex;
 	flex-direction: column;
 	align-content: baseline;
+	align-items: center;
+	width: 400px;
 }
 .columna_grupo img{
 	height: 50px;
+}
+.grupo{
+	display: flex;
+	flex-wrap: wrap;
 }
